--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "api-ai-javascript": "^2.0.0-beta.21",
+    "await-to-js": "^2.0.1",
     "axios": "^0.18.0",
+    "milligram": "^1.3.0",
+    "random-bool": "^1.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-monaco-editor": "^0.20.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.0",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
